tests/netedit/demandelements/stop/basic/invalid_type/output.netedit
TestFunctions: Netedit opened successfully
Finding reference
TestFunctions: 'reference.png' found. Position: 304 - 168
dummyType
TestFunctions: Clicked over position 550 - 423
stopLane
TestFunctions: Clicked over position 550 - 423
TestFunctions: Clicked over position 304 - 168
TestFunctions: Clicked over position 304 - 168
TestFunctions: Clicked over position 304 - 168
TestFunctions: Netedit closed successfully
